--- a/README
+++ b/README
@@ -8,9 +8,19 @@ USAGE
     ensemblerna <fasta file> <output directory> [options]
 
 DESCRIPTION
-    EnsembleRNA is a package for the visualization and comparison of RNA structural ensembles. This package creates a stable map of conformational space for a given RNA and its mutants. The map explores the most diverse conformational space and generates the structures using established Boltzmann-weighted suboptimal sampling algorithms. Using vector representation based on arc diagram nested loop patterns, EnsembleRNA projects clusters of structures from the map into two dimensions using non-metric multi-dimensional scaling. Individual RNA ensembles are visualized in this space by fluctuating the size of the structure clusters in a bubble plot.
-    The sequence from the fasta file is the reference used to create the map of conformational space unless otherwise specified. To compare two reference structures, the same sequence or set of structures must be used to create the map of conformational space. Longer RNAs may require more sequences for a stable visualization. Selective 2'-hydroxyl acylation and primer extension (SHAPE) data can be included to guide the prediction of the reference ensemble.
-    Note: EnsembleRNA is written for use on a Linux/Unix type of operating system. Use of EnsembleRNA in any instance requires the installation of the numpy, jinja2, ipython, mpld3, matplotlib, scipy and sklearn modules for Python. Also required is the RNAstructure package from the Mathews lab.
+    EnsembleRNA is a package for the visualization and comparison of RNA structural ensembles. This package 
+creates a stable map of conformational space for a given RNA and its mutants. The map explores the most diverse conformational space and generates the structures using established Boltzmann-weighted suboptimal sampling
+algorithms. Using vector representation based on arc diagram nested loop patterns, EnsembleRNA projects clusters 
+of structures from the map into two dimensions using non-metric multi-dimensional scaling. Individual RNA ensembles 
+are visualized in this space by fluctuating the size of the structure clusters in a bubble plot.
+    The sequence from the fasta file is the reference used to create the map of conformational space unless 
+otherwise specified. To compare two reference structures, the same sequence or set of structures must be used to 
+create the map of conformational space. Longer RNAs may require more sequences for a stable visualization. 
+Selective 2'-hydroxyl acylation and primer extension (SHAPE) data can be included to guide the prediction of the 
+reference ensemble.
+    Note: EnsembleRNA is written for use on a Linux/Unix type of operating system. Use of EnsembleRNA in any 
+instance requires the installation of the numpy, jinja2, ipython, mpld3, matplotlib, scipy and sklearn modules for 
+Python. Also required is the RNAstructure package from the Mathews lab.
 
 OPTIONS
     -h, --help            show this help message and exit
